RESOLVED FIXED278876
AX: Implement [WebAccessibilityObjectWrapper misspellingTextMarkerRange:forward:] on iOS using new AXSearchManager functionality.
https://bugs.webkit.org/show_bug.cgi?id=278876
Summary AX: Implement [WebAccessibilityObjectWrapper misspellingTextMarkerRange:forwa...
Andres Gonzalez
Reported 2024-08-29 12:45:57 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-29 12:46:05 PDT
Andres Gonzalez
Comment 2 2024-08-29 12:57:38 PDT
EWS
Comment 3 2024-08-30 04:07:03 PDT
Committed 282959@main (c2423ee74d49): <https://commits.webkit.org/282959@main> Reviewed commits have been landed. Closing PR #32903 and removing active labels.
Simon Fraser (smfr)
Comment 4 2024-08-31 12:24:37 PDT
It looks like this caused a flaky crash of accessibility/out-of-bounds-rowspan.html: https://results.webkit.org/?suite=layout-tests&test=accessibility%2Fout-of-bounds-rowspan.html
Andres Gonzalez
Comment 5 2024-09-05 06:09:36 PDT
(In reply to Simon Fraser (smfr) from comment #4) > It looks like this caused a flaky crash of > accessibility/out-of-bounds-rowspan.html: > https://results.webkit.org/?suite=layout-tests&test=accessibility%2Fout-of- > bounds-rowspan.html Thanks for pointing this out. Fixed in https://bugs.webkit.org/show_bug.cgi?id=279145.
Note You need to log in before you can comment on or make changes to this bug.