AX: Implement [WebAccessibilityObjectWrapper misspellingTextMarkerRange:forward:] on iOS using new AXSearchManager functionality. https://bugs.webkit.org/show_bug.cgi?id=278876 <rdar://problem/134957919>

Reviewed by Tyler Wilcock.

This unifies the code paths for iOS and Mac to obtain the range of a misspelling. It also improves this functionality on iOS since now misspellingTextMarkerRange:forward: is not confined to the misspellings in the current object.

As a required byproduct of this changes, we added the conversion between AXTextMarkerRanges and NSArrays of TextMarkers used on iOS to represent ranges.

* LayoutTests/accessibility/misspelling-range.html:
* Source/WebCore/accessibility/AXTextMarker.h:
* Source/WebCore/accessibility/cocoa/AXTextMarkerCocoa.mm:
(WebCore::AXTextMarkerRange::AXTextMarkerRange):
(WebCore::AXTextMarkerRange::platformData const):
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.h:
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityTextMarker initWithTextMarker:cache:]):
(-[WebAccessibilityObjectWrapper stringForTextMarkers:]):
(-[WebAccessibilityObjectWrapper misspellingTextMarkerRange:forward:]):

Canonical link: https://commits.webkit.org/282959@main