Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.h
@@ -30,6 +30,10 @@
 #import "WebAccessibilityObjectWrapperBase.h"
 #import "WAKView.h"
 
+namespace WebCore {
+class VisiblePosition;
+}
+
 // NSAttributedStrings support.
 
 static NSString * const UIAccessibilityTextAttributeContext = @"UIAccessibilityTextAttributeContext";
@@ -70,6 +74,19 @@ static NSString * const UIAccessibilityTextualContextSourceCode = @"UIAccessibil
 // This is called by the Accessibility system to relay back to the chrome.
 - (void)handleNotificationRelayToChrome:(NSString *)notificationName notificationData:(NSData *)notificationData;
 
+@end
+
+@interface WebAccessibilityTextMarker : NSObject {
+    WebCore::AXObjectCache* _cache;
+    WebCore::TextMarkerData _textMarkerData;
+}
+
++ (WebAccessibilityTextMarker *)textMarkerWithVisiblePosition:(WebCore::VisiblePosition&)visiblePos cache:(WebCore::AXObjectCache*)cache;
++ (WebAccessibilityTextMarker *)textMarkerWithCharacterOffset:(WebCore::CharacterOffset&)characterOffset cache:(WebCore::AXObjectCache*)cache;
++ (WebAccessibilityTextMarker *)startOrEndTextMarkerForRange:(const std::optional<WebCore::SimpleRange>&)range isStart:(BOOL)isStart cache:(WebCore::AXObjectCache*)cache;
+
+- (id)initWithTextMarker:(const WebCore::TextMarkerData *)data cache:(WebCore::AXObjectCache*)cache;
+- (WebCore::TextMarkerData)textMarkerData;
 @end
 
 #endif // PLATFORM(IOS_FAMILY)
